# instagram_final_project

./: .coverage  .env_example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
conf/: cache.py  config.py  const.py  messages.py
database/: db.py
migrations/: env.py
migrations/versions/: 080dc0acfcfd_initial_migration.py  2b3b02582ecf_init.py  2cab6aee36e0_set_lazy_select_in_posts_field.py  4a7b544d7577_init.py  507b50044bfc_init.py  63f4283347ac_init.py  7403b0ce0490_add_token_table.py  8f5927a78e56_init.py  a3b69c4a7817_init.py  a6de52ae5314_initial_migration.py  a76f74b9b6f9_init.py  ae9ee4d5eeea_fourth_migration.py  b606553cbd2d_initial_migration.py  cb732db69bc6_init.py  d68c2e58b316_second_migration.py  d90fb38ec7bc_third_migration.py  e9552ed517da_fill_data_in_roles_table.py
src/auth/: mail_utils.py  repos.py  routes.py  utils.py
src/comments/: comments_services.py  models.py  repository.py  router.py  schema.py  schemas.py  services.py
src/files/: models.py
src/images/: image_service.py  models.py  qr_service.py  repository.py  schemas.py
src/invoices/: models.py
src/messages/: models.py
src/orders/: models.py
src/payments/: models.py
src/plans/: models.py
src/posts/: models.py  post_service.py  repository.py  routes.py  schemas.py
tests/: conftest.py  conftestMy.py  conftest__old_version.py  conftest_async.py  test_auth.py  test_e2e_commets_routes.py  test_e2e_healthchecker_route.py  test_e2e_posts_routes.py  test_e2e_scores_routes.py  test_e2e_users_auth_routes.py  test_unit_comments_repository.py  test_unit_image_repository.py  test_unit_post_repository.py  test_unit_repo_users.py  test_unit_scores_repository_async.py  test_unit_tags_repository.py  test_unit_users_repository.py
(+32 files in other folders)
